apps/shda-financial/overlays/aws-us-west-2-cc-smarsh-dev/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cc-route-shda-financial-dev
  namespace: cc-smarsh-dev
spec:
  hosts:
    - "shda-financial.cc-dev.internal.smarsh.us-west-2.aws.smarsh.cloud"
  gateways:
    - istio-ingress/apps-https-tcp-gw-ep-mt-smarsh-cc-dev
  http:
    - route:
        - destination:
            host: shda-financial
      match:
      - uri:
          prefix: "/"
